--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width-device-width">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type= "text/css" href= "CSS/normalize.css">
-        <link rel="stylesheet" type= "text/css" href= "CSS/main.css">
+        <link rel="stylesheet" type= "text/css" href= "normalize.css">
+        <link rel="stylesheet" type= "text/css" href= "main.css">
     </head>
     <title>Portolio</title>
-    <body class="body">
-        <header class="header-topBar section-border">
+
+    <div class="background-image"></div>
+    
+    <body class="body-text">
+        <header class="header-topBar">
             <div class="header-nameBox">Debra Sparr</div>
             <nav class="links">
                 <a href="./about.html">About</a>
